# multi-agent-rl

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  buffer.py  communication.py  mappo.py  networks.py  ppo.py
src/environments/: __init__.py  coin_game.py  env_base.py  predator_prey.py  simple_spread.py
src/viz/: __init__.py  app.py
tests/: test_communication.py  test_environments.py  test_mappo.py  test_ppo.py
