[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-rl"
version = "0.1.0"
description = "Multi-agent reinforcement learning — independent learners, MAPPO, communication channels, emergent cooperation/competition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Abhi Wadhwa"},
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "streamlit>=1.28",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "tqdm>=4.65",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
marl = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
